force-app/main/default/objects/Opportunity_Hotel__c/Opportunity_Hotel__c.object-meta.xml
<CustomObject>
    <label>Opportunity Hotel</label>
    <nameField>
        <displayFormat>OH-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Hotels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>