force-app/main/default/objects/Opportunity_Hotel__c/fields/Hotel_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Code__c</fullName>
    <formula>Hotel__r.Hotel_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Code</label>
    <type>Text</type>
</CustomField>