force-app/main/default/objects/Opportunity_Hotel__c/fields/LOS_Reason__c.field-meta.xml
<CustomField>
    <fullName>LOS_Reason__c</fullName>
    <label>LOS Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>