force-app/main/default/objects/Opportunity_Hotel__c/fields/Lost_Reason_Info__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Info__c</fullName>
    <label>Lost Reason Info</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>