force-app/main/default/objects/Opportunity_Hotel__c/fields/Primary_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Primary_Hotel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Hotel</label>
    <type>Checkbox</type>
</CustomField>