force-app/main/default/objects/Opportunity_Hotel__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHECK</fullName>
            </value>
            <value>
                <fullName>POT</fullName>
            </value>
            <value>
                <fullName>OPT</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>DEF</fullName>
            </value>
            <value>
                <fullName>LOS</fullName>
            </value>
            <value>
                <fullName>UNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>