force-app/main/default/objects/Opportunity_Hotel__c/fields/Sub_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sub_Amount__c</fullName>
    <label>Sub Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>