force-app/main/default/objects/Opportunity_Hotel__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Sent to Client</fullName>
            </value>
            <value>
                <fullName>Not Yet Sent Client</fullName>
            </value>
            <value>
                <fullName>Waiting for Hotel Response</fullName>
            </value>
            <value>
                <fullName>Waiting for Client Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>