force-app/main/default/objects/Opportunity_Hotel__c/validationRules/StatusLOS.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusLOS</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISPICKVAL(Status__c,&quot;UNC&quot;),ISPICKVAL(Status__c,&quot;LOS&quot;)) &amp;&amp;  ISBLANK(LOS_Reason__c)</errorConditionFormula>
    <errorDisplayField>LOS_Reason__c</errorDisplayField>
    <errorMessage>When status is UNC or LOS, LOS Reason is required.</errorMessage>
</ValidationRule>